# welltest-pta

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/source/: api.rst  changelog.rst  cli.rst  conf.py  contributing.rst  deconvolution.rst  detector.rst  examples.rst  index.rst  installation.rst  quickstart.rst  validation.rst
examples/: deconvolution_demo.py  full_workflow.py  manual_split.py  quick_start.py
src/welltest_pta/: __init__.py  __version__.py  cli.py  events.py  parser.py  welltest.py
src/welltest_pta/analysis/: __init__.py  bourdet.py  deconvolution.py  flow_regimes.py  horner.py  mdh.py  reservoir.py
src/welltest_pta/detection/: __init__.py  detector.py
src/welltest_pta/utils/: __init__.py  synthetic.py
src/welltest_pta/validation/: __init__.py  cross_validation.py
src/welltest_pta/visualization/: __init__.py  composite.py
tests/: conftest.py  test_analysis.py  test_cv.py  test_deconvolution.py  test_detector.py  test_events.py  test_parser.py  test_version.py
